<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FtpClientApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ftp">Welcome on GreenZilla</string>
    <string name="host">Host name</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="connection">Connection</string>

</resources>
